Depart lista zuzenduta

--- a/RidesJSF/src/main/webapp/QueryRides.xhtml
+++ b/RidesJSF/src/main/webapp/QueryRides.xhtml
@@ -43,7 +43,7 @@ update="mezuak"></p:ajax>
 
 <tr>
 <td><h3>Depart City</h3></td>
-<td><h:selectOneMenu value="#{query.mota}">>
+<td><h:selectOneMenu value="#{query.mota}">
 <f:selectItems value="#{query.motak}"/>
 </h:selectOneMenu></td>
 </tr>
