--- a/RidesJSF/src/main/webapp/CreateRide.xhtml
+++ b/RidesJSF/src/main/webapp/CreateRide.xhtml
@@ -77,7 +77,7 @@
                 <td><h:commandButton class='btn' value="Create Ride" action="#{create.creator}">
                 <!--  <f:ajax render="mezu"></f:ajax>-->
             	</h:commandButton></td>
-            	<td><h:commandButton class='btn' value="Close" action="return"/></td>
+            	<td><h:commandButton class='btn' value="Close" action="return" immediate="true"/></td>
             </tr>
             <tr>
             	<td><h:messages id="mezu" style="color:blue" globalOnly="true"/></td>
