General Design Complete

--- a/RidesJSF/src/main/webapp/Menu.xhtml
+++ b/RidesJSF/src/main/webapp/Menu.xhtml
@@ -8,18 +8,22 @@
 	<title>Car Share by Braian</title>
 	<h:outputStylesheet library="css" name="menu.css" />
 </h:head>
+
 <h:body>
 <h:form>
-<h3>Mesedez, sartu izena eta pasahitza </h3>
-<table>
-<tr>
-<td><h:commandButton class='btn' value="Create Ride" action="create"/></td>
-</tr>
-<tr>
-<td><h:commandButton class='btn' value="Query Rides" action="query"/></td>
-</tr>
-</table>
+<div class="main-container">
+	<h3>Aukeratu</h3>
+	<table>
+	<tr>
+	<td><h:commandButton class='btn' value="Create Ride" action="create"/></td>
+	</tr>
+	<tr>
+	<td><h:commandButton class='btn' value="Query Rides" action="query"/></td>
+	</tr>
+	</table>
+</div>
 </h:form>
 </h:body>
+
 </f:view>
 </html>
