Pass Values from one Bean to Another

--- a/RidesJSF/src/main/webapp/QueryRides.xhtml
+++ b/RidesJSF/src/main/webapp/QueryRides.xhtml
@@ -58,7 +58,7 @@
 				<table>
 		            
 		            <tr>
-		            	<td><h:messages id="mezu" style="color:blue" globalOnly="true"/></td>
+		            	<td>Hola<h:outputText value="#{query.toStringBidaiList()}" id="resultado" />que tal?</td>
 		            </tr>
 		            <tr>
 		            	<td>
