--- a/RidesJSF/src/main/webapp/Menu.xhtml
+++ b/RidesJSF/src/main/webapp/Menu.xhtml
@@ -4,26 +4,53 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html">
 <f:view>
-<h:head>
-	<title>Car Share by Braian</title>
-	<h:outputStylesheet library="css" name="menu.css" />
-</h:head>
+    <h:head>
+        <title>Car Share | Braian</title>
+        <h:outputStylesheet library="css" name="menu.css" />
+    </h:head>
 
-<h:body>
-<h:form>
-<div class="main-container">
-	<h3>Aukeratu</h3>
-	<table>
-	<tr>
-	<td><h:commandButton class='btn' value="Create Ride" action="create"/></td>
-	</tr>
-	<tr>
-	<td><h:commandButton class='btn' value="Query Rides" action="query"/></td>
-	</tr>
-	</table>
-</div>
-</h:form>
-</h:body>
+    <h:body>
+        <div class="page-container">
+            <div class="header">
+                <div class="header-left">
+                    <img
+                        src="https://www.ehu.eus/documents/340468/5849813/Biling%C3%BCe_negativo_alta.jpg"
+                        alt="Logo"
+                        class="header-logo" />
+                </div>
+                <div class="header-center">
+                    <h3 class="header-title">Welcome to Car Share</h3>
+                </div>
+                <h:form>
+                <div class="header-right">
+                    <h:commandButton class="btn logout-btn" value="Log Out" action="bye" />
+                </div>
+                </h:form>
+            </div>
 
+            <h:form>
+                <div class="main-container">
+                    <h3>Aukeratu</h3>
+                    <table>
+                        <tr>
+                            <td><h:commandButton class="btn" value="Create Ride" action="create" /></td>
+                        </tr>
+                        <tr>
+                            <td><h:commandButton class="btn" value="Query Rides" action="query" /></td>
+                        </tr>
+                    </table>
+                </div>
+            </h:form>
+
+            <div class="footer">
+                <div class="footer-left">
+                    <p>Software Ingeniaritza II: RidesJSF</p>
+                </div>
+                <div class="footer-right">
+                    <p>Creative Commons: Braian Porta | 2024</p>
+                </div>
+            </div>
+        </div>
+    </h:body>
 </f:view>
 </html>
