--- a/RidesJSF/src/main/webapp/Menu.xhtml
+++ b/RidesJSF/src/main/webapp/Menu.xhtml
@@ -30,7 +30,7 @@
 
             <h:form>
                 <div class="main-container">
-                    <h3>Aukeratu</h3>
+                    <h3>Select Option</h3>
                     <table>
                         <tr>
                             <td><h:commandButton class="btn" value="Create Ride" action="create" /></td>
