--- a/RidesJSF/src/main/webapp/QueryRides.xhtml
+++ b/RidesJSF/src/main/webapp/QueryRides.xhtml
@@ -33,7 +33,7 @@
 						<td>
 							<h:selectOneMenu value="#{query.bidaiNora}" id="arrivalCity">
 								<f:selectItems value="#{query.motakBaldintzatua}" />
-								<f:ajax event="change" listener="#{query.updateSetBidaiNora}" execute="@this"/>
+								<f:ajax event="change" listener="#{query.updateSetBidaiNora}"/>
 							</h:selectOneMenu>
 						</td>
 					</tr>
