--- a/RidesJSF/src/main/webapp/Register.xhtml
+++ b/RidesJSF/src/main/webapp/Register.xhtml
@@ -14,7 +14,7 @@
         <!-- Encabezado -->
         <div class="header">
             <h1>Car Share</h1>
-            <p>Please, enter with your profile</p>
+            <p>Create a new Profile</p>
         </div>
 
         <!-- Formulario principal -->
@@ -37,17 +37,21 @@
                         </td>
                         <td> <h:message for="pass" style="color:red" /></td>
                     </tr>
+                    <tr>
+                        <td>Errepikatu pasahitza:</td>
+                        <td>
+                            <h:inputSecret id="pass2" redisplay="true" value="#{login.pasahitza2}">
+                                <f:validateLongRange minimum="1" maximum="500" />
+                            </h:inputSecret>
+                        </td>
+                    </tr>
                 </table>
                 <div class="container">
                 	<p>
-                    	<h:commandButton value="Log In" action="#{login.egiaztatu}" />
+                    	<h:commandButton value="Create User" action="#{login.createUser}" />
                 	</p>
                 </div>
                 <h:messages style="color:blue"/>
-                <div class="container">
-                	<p>Not registered yet?</p>
-                	<h:commandButton value="Register Here" action="newuser" />
-                </div>
             </h:form>
         </div>
 
