--- a/RidesJSF/src/main/webapp/Login.xhtml
+++ b/RidesJSF/src/main/webapp/Login.xhtml
@@ -7,6 +7,7 @@
 <f:view>
     <h:head>
         <title>Car Shre | Braian</title>
+        <link rel="icon" type="image/x-icon" href="https://images.vexels.com/content/128427/preview/pink-circle-retro-car-2d1ecc.png"/>
         <h:outputStylesheet library="css" name="login.css" />
     </h:head>
     
