--- a/RidesJSF/src/main/webapp/Menu.xhtml
+++ b/RidesJSF/src/main/webapp/Menu.xhtml
@@ -6,6 +6,7 @@
 <f:view>
     <h:head>
         <title>Car Share | Braian</title>
+        <link rel="icon" type="image/x-icon" href="https://images.vexels.com/content/128427/preview/pink-circle-retro-car-2d1ecc.png"/>
         <h:outputStylesheet library="css" name="menu.css" />
     </h:head>
 
@@ -27,21 +28,21 @@
                 </div>
                 </h:form>
             </div>
-
+			<div class="main-container">
             <h:form>
-                <div class="main-container">
+                
                     <h3>Select Option</h3>
                     <table>
                         <tr>
                             <td><h:commandButton class="btn" value="Create Ride" action="create" /></td>
                         </tr>
                         <tr>
-                            <td><h:commandButton class="btn" value="Query Rides" action="query" /></td>
+                            <td><h:commandButton class="btn" value="Find Rides" action="query" /></td>
                         </tr>
                     </table>
-                </div>
+                
             </h:form>
-
+			</div>
             <div class="footer">
                 <div class="footer-left">
                     <p>Software Ingeniaritza II: RidesJSF</p>
