--- a/RidesJSF/src/main/webapp/Register.xhtml
+++ b/RidesJSF/src/main/webapp/Register.xhtml
@@ -6,7 +6,8 @@
 
 <f:view>
     <h:head>
-        <title>Car Shre | Braian</title>
+        <title>Car Share | Braian</title>
+        <link rel="icon" type="image/x-icon" href="https://images.vexels.com/content/128427/preview/pink-circle-retro-car-2d1ecc.png"/>
         <h:outputStylesheet library="css" name="login.css" />
     </h:head>
     
