--- a/RidesJSF/src/main/webapp/Menu.xhtml
+++ b/RidesJSF/src/main/webapp/Menu.xhtml
@@ -39,6 +39,12 @@
                         <tr>
                             <td><h:commandButton class="btn" value="Find Rides" action="query" /></td>
                         </tr>
+                        <tr>
+                            <td><h:commandButton class="btn" value="Gidari Baten Bidai Guztiak Erakutsi" action="show" /></td>
+                        </tr>
+                        <tr>
+                            <td><h:commandButton class="btn" value="Your Profile" action="profile" /></td>
+                        </tr>
                     </table>
                 
             </h:form>
