--- a/RidesJSF/src/main/webapp/DeleteUser.xhtml
+++ b/RidesJSF/src/main/webapp/DeleteUser.xhtml
@@ -9,15 +9,28 @@
     <h:head>
         <title>Car Share | Braian</title>
         <link rel="icon" type="image/x-icon" href="https://images.vexels.com/content/128427/preview/pink-circle-retro-car-2d1ecc.png"/>
-        <h:outputStylesheet library="css" name="login.css" />
+        <h:outputStylesheet library="css" name="profile.css" />
     </h:head>
     
     <h:body>
-        <!-- Encabezado -->
-        <div class="header">
-            <h1>Car Share</h1>
-            <p>Please, enter with your profile</p>
+ <div class="page-container">
+    <div class="header">
+        <div class="header-left">
+            <img
+                src="https://www.ehu.eus/documents/340468/5849813/Biling%C3%BCe_negativo_alta.jpg"
+                alt="Logo"
+                class="header-logo" />
         </div>
+        <div class="header-center">
+            <h3 class="header-title">Car Share | create ride</h3>
+        </div>
+        <h:form>
+        <div class="header-right">
+            <h:commandButton class="btn query-btn" value="Menu" action="return" immediate="true"/>
+            <h:commandButton class="btn logout-btn" value="Log Out" action="bye" immediate="true"/>
+        </div>
+        </h:form>
+    </div>
 
         <!-- Formulario principal -->
         <p:growl id="messages" showDetail="true" life="5300" />
@@ -26,7 +39,7 @@
                 <table>
                     <tr>
                         <td>User:</td>
-                        <td><h:inputText id="izen" value="#{login.izena}">
+                        <td><h:inputText id="izen" value="#{profile.izena}">
                             <f:validateRegex pattern="^(([a-z]|[A-Z])+[0-9]?)$"/>
                         </h:inputText></td>
                         <td><h:message for="izen" style="color:red" /></td>
@@ -34,7 +47,7 @@
                     <tr>
                         <td>Password:</td>
                         <td>
-                            <h:inputSecret id="pass" redisplay="true" value="#{login.pasahitza}">
+                            <h:inputSecret id="pass" redisplay="true" value="#{profile.pasahitza}">
                                 <f:validateLongRange minimum="1" maximum="500" />
                             </h:inputSecret>
                         </td>
@@ -43,17 +56,14 @@
                 </table>
                 <div class="container">
                 	<p>
-                    	<h:commandButton value="Log In" action="#{login.egiaztatu}" />
+                    	<h:commandButton value="Delete User" action="#{profile.deleteUser}" />
                 	</p>
                 </div>
-                <div class="container">
-                	<p>Not registered yet?</p>
-                	<h:commandButton value="Register Here" action="newuser" immediate="true"/>
-                </div>
             </h:form>
+            </div>
         </div>
 
-        <!-- Pie de página -->
+        
         <div class="footer">
          	<div class="footer-left">
             	<p>Software Ingeniaritza II: RidesJSF</p>
