--- a/RidesJSF/src/main/webapp/Profile.xhtml
+++ b/RidesJSF/src/main/webapp/Profile.xhtml
@@ -13,80 +13,79 @@
     </h:head>
     
     <h:body>
- <div class="page-container">
-    <div class="header">
-        <div class="header-left">
-            <img
-                src="https://www.ehu.eus/documents/340468/5849813/Biling%C3%BCe_negativo_alta.jpg"
-                alt="Logo"
-                class="header-logo" />
-        </div>
-        <div class="header-center">
-            <h3 class="header-title">Car Share | your profile</h3>
-        </div>
-        <h:form>
-        <div class="header-right">
-            <h:commandButton class="btn query-btn" value="Menu" action="return" immediate="true"/>
-            <h:commandButton class="btn logout-btn" value="Log Out" action="bye" immediate="true"/>
-        </div>
-        </h:form>
-    </div>
-
-        <!-- Formulario principal -->
-        <p:growl id="messages" showDetail="true" life="5300" />
-        <div class="main-container">
-            <h:form id="nireForm">
-            	<h2>Your information</h2>
-                <table>
-                    <tr>
-                        <td>User:</td>
-                        <td><h:inputText id="izen" value="#{profile.izena}" placeholder="Si">
-                            <f:validateRegex pattern="^(([a-z]|[A-Z])+[0-9]?)$"/>
-                        </h:inputText></td>
-                        <td><h:message for="izen" style="color:red" /></td>
-                    </tr>
-                    <tr>
-                        <td>Password:</td>
-                        <td>
-                            <h:inputSecret id="pass" redisplay="true" value="#{profile.pasahitza}">
-                                <f:validateLongRange minimum="1" maximum="500" />
-                            </h:inputSecret>
-                        </td>
-                        <h:commandButton value="Edit User" action="#{profile.editeUser}" />
-                        <h:commandButton value="Delete User" action="#{profile.deleteUser}" />
-                        <td> <h:message for="pass" style="color:red" /></td>
-                    </tr>
-                    <tr>
-		            	<td><p:dataTable id="taulaPF" value="#{query.bidaiakByID(profile.izena)}" var="item" selectionMode="single" selection="#{query.bidaiaR}" border="1" rowKey="#{item.rideNumber}" emptyMessage="No rides">
-							<p:ajax event="rowSelect" listener="#{query.onEventSelect}" update=":nireForm:mezuak"></p:ajax>
-							<f:facet name="header">Created rides:</f:facet>
-							<p:column headerText="From">#{item.from}</p:column>
-							<p:column headerText="To">#{item.to}</p:column>
-							<p:column headerText="Datte">#{item.date}</p:column>
-							<p:column headerText="Price">#{item.price}</p:column>
-							</p:dataTable></td>
-		            </tr>
-		            <tr><h:messages id="mezuak" style="color:blue" /></tr>
-                </table>
-                <div class="container">
-                	<p>
-                    	<h:commandButton value="Delete User" action="#{profile.deleteUser}" />
-                	</p>
+        <div class="page-container">
+            <div class="header">
+                <div class="header-left">
+                    <img
+                        src="https://www.ehu.eus/documents/340468/5849813/Biling%C3%BCe_negativo_alta.jpg"
+                        alt="Logo"
+                        class="header-logo" />
                 </div>
-            </h:form>
+                <div class="header-center">
+                    <h3 class="header-title">Car Share | your profile</h3>
+                </div>
+                <h:form>
+                    <div class="header-right">
+                        <h:commandButton class="btn query-btn" value="Menu" action="return" immediate="true"/>
+                        <h:commandButton class="btn logout-btn" value="Log Out" action="bye" immediate="true"/>
+                    </div>
+                </h:form>
+            </div>
+
+            <p:growl id="messages" showDetail="true" life="5300" />
+            <div class="main-container">
+                <h:form id="nireForm">
+                    <h2>Your information</h2>
+                    <div class="form-container">
+                        <div class="left-column">
+                            <table>
+                                <tr>
+                                    <td>User:</td>
+                                    <td>
+                                        <h:inputText id="izen" value="#{profile.izena}" placeholder="Si">
+                                            <f:validateRegex pattern="^(([a-z]|[A-Z])+[0-9]?)$"/>
+                                        </h:inputText>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Password:</td>
+                                    <td>
+                                        <h:inputSecret id="pass" redisplay="true" value="#{profile.pasahitza}">
+                                            <f:validateLongRange minimum="1" maximum="500" />
+                                        </h:inputSecret>
+                                    </td>
+                                </tr>
+                            </table>
+
+                            <div class="button-container">
+                                <h:commandButton class="btn" value="Edit User" action="#{profile.editUser}" />
+                                <h:commandButton class="btn" value="Delete User" action="#{profile.deleteUser}" />
+                            </div>
+                        </div>
+
+                        <div class="right-column">
+                            <p:dataTable id="taulaPF" value="#{query.bidaiakByID(profile.izena)}" var="item" selectionMode="single" selection="#{query.bidaiaR}" border="1" rowKey="#{item.rideNumber}" emptyMessage="No rides">
+                                <p:ajax event="rowSelect" listener="#{query.onEventSelect}"></p:ajax>
+                                <f:facet name="header">Created rides</f:facet>
+                                <p:column headerText="From">#{item.from}</p:column>
+                                <p:column headerText="To">#{item.to}</p:column>
+                                <p:column headerText="Date">#{item.date}</p:column>
+                                <p:column headerText="Price">#{item.price}</p:column>
+                            </p:dataTable>
+                        </div>
+                    </div>
+                </h:form>
             </div>
         </div>
 
-        
         <div class="footer">
-         	<div class="footer-left">
-            	<p>Software Ingeniaritza II: RidesJSF</p>
+            <div class="footer-left">
+                <p>Software Ingeniaritza II: RidesJSF</p>
             </div>
             <div class="footer-right">
-            	<p>Creative Commons: Braian Porta | 2024</p>
+                <p>Creative Commons: Braian Porta | 2024</p>
             </div>
-		</div>
-
+        </div>
     </h:body>
 </f:view>
 
